# Cosmotools

./: .CMakeLists.txt.swp  CMakeLists.txt  INSTALL  Makefile  Makefile_owls  README.md
config/: config.ita_owl
cosmotools/: README.md  pyproject.toml
cosmotools/cosmotools/: convert_units.py  correlate_maps.py  sim_noise_map.py
map_editor/: .gitignore  Makefile  map_editor_complex_ops_mod.f90  map_editor_utils.f90  math_tools.f90
map_editor/config/: config.gnu  config.gnu_laptop  config.ita_intel  config.ita_intel~
src/cpp/libutil/: scolorizer.cpp
src/cpp/utils/: ces2runlist.cpp  ces_translate  ces_translate.cpp  ceslist_merge.cpp  ceslistdiff.cpp  cut2accept  cut2accept.cpp  date2mjd  date2mjd.cpp  eph  eph.cpp  fft  fft.cpp  gp2tab  gp2tab.cpp  handy.h  hcat.cpp  idate  idate.cpp  l1_translate  l1_translate.cpp  lxtxt.cpp  map2png.cpp  map2ps.cpp  mjd2unix  mjd2unix.cpp  osamize.cpp  patch_ident.cpp  powspec  powspec.cpp  ppm2png  ppm2png.cpp  ps2ascii.cpp  ps2fits.cpp  ps2map.cpp  reverse.cpp  sfor.cpp  simplefont.h  smap.cpp  tabcommon.h  (+2 more)
src/f90/include/: quiet_covfile_mod.f90  quiet_hdf_mod.f90  quiet_mapfile_mod.f90
src/f90/map_editor/: Makefile  map_editor.f90  map_editor_complex_ops_mod.f90  map_editor_simple_ops_mod.f90  map_editor_utils.f90
src/f90/maptool/: maptool.f90
src/f90/postmap/: postmap.f90
src/python/: APEX_weather.py  FITS2ASCII_TT.py  README  attachMaps.py  averageGains.py  barcoder.py  buildAccept.py  calculate_SS_contrib.py  ces_translate.py  compare_acceptlists.py  convertGains.py  convertSQLtoAccept.py  create_binnedstats_perCES.py  cuts.cmd  cuts2accept.py  dataExtractionExample.py  differenceNoiseMap.py  diode_maps.py  file_read_utils.py  fitPowerSpectrum.py  gaussfit.py  generateBatch.py  generateMLAccept.py  generateMLAccept4a.py  generateMLAccept6a.py  generateMLAccept7b.py  generateOsloAccept.py  generatePCLAccept.py  getSigma.py  getcestime.py  histogramWBandCESStats.py  histogram_ces_stats.py  jackknifeAccept.py  makeCESRuns.py  makeDifferenceMap.py  makeJackknives.py  makeJackknives_091130.py  makeNoiseWeightedMap.py  makeNullRuns.py  makeRun.py  (+32 more)
src/python/cuts/: APEX_weather.py  README
src/python/extensions/: Makefile  _quietPyExt.c  alpha.f90  quick_qpoint.f90  setup.py
src/python/extensions/quietPyExt/: __init__.py
src/python/retired/: generateMLAccept2a.py
